# Orbis_SLAM

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  package.xml
app/: CMakeLists.txt  ZEDRecPlay.cpp  orbis_slam_main.cpp  zed_live_node.cpp  zed_playback_node.cpp
documentation/: LOOP_CLOSURE_IMPLEMENTATION.md  LOOP_CLOSURE_SUMMARY.md  TESTING_LOOP_CLOSURE.md  protobuf_recording_guide.md  technical_documentation.md
include/orbis_slam/: common_utils.h  covisibility_graph.h  essential_data_structure.h  feature_extractor.h  keyframe_selector.h  loop_closure_detector.h  orbis_slam_pipeline.h  pose_optimizer.h  vocabulary_manager.h  zed_setup_help_utils.h  zed_wrapper.h
include/orbis_slam/recorder_and_player/: playback.h  utils.h  zed_backend_worker.h  zed_player.h  zed_recorder.h
launch/: orbis_slam_sensor_only.py  orbis_slam_with_loop_closure.py  sensor_only_view.rviz  zed_playback.launch.py
proto/: CMakeLists.txt  zed_recording.pb.cc  zed_recording.pb.h  zed_recording.proto
src/: CMakeLists.txt  covisibility_graph.cpp  feature_extractor.cpp  keyframe_selector.cpp  loop_closure_detector.cpp  orbis_slam_pipeline.cpp  pose_optimizer.cpp  vocabulary_manager.cpp  zed_backend_worker.cpp  zed_player.cpp  zed_recorder.cpp
